tests/code/pages/errors/format-checker-html.tht

    tem html {
        <div sdfsdf ='sdfsdf'>sdfsdf
    }

